<resources>
    <string name="app_name">RxJava魔法师</string>
    <string name="doSomeWork">doSomeWork</string>
    <string name="declare">Declare</string>
    <string name="guide">Guide</string>
    <string name="about">About</string>
    <string name="setting">Settings</string>
    <string name="operators">Operators</string>
    <string name="networking">Networking</string>
    <string name="cache">Cache</string>
    <string name="pagination">Pagination</string>
    <string name="search">Search</string>
    <string name="simple">Simple</string>
    <string name="map">Map</string>
    <string name="zip">Zip</string>
    <string name="disposable">Disposable</string>
    <string name="take">Take</string>
    <string name="timer">Timer</string>
    <string name="interval">Interval</string>
    <string name="SingleObserver">SingleObserver</string>
    <string name="CompletableObserver">CompletableObserver</string>
    <string name="Flowable">Flowable</string>
    <string name="reduce">Reduce</string>
    <string name="buffer">Buffer</string>
    <string name="filter">Filter</string>
    <string name="skip">Skip</string>
    <string name="scan">Scan</string>
    <string name="replay">Replay</string>
    <string name="concat">Concat</string>
    <string name="merge">Merge</string>
    <string name="defer">Defer</string>
    <string name="distinct">Distinct</string>
    <string name="last">Last</string>
    <string name="replay_subject">ReplaySubject</string>
    <string name="publish_subject">PublishSubject</string>
    <string name="behavior_subject">BehaviorSubject</string>
    <string name="async_subject">AsyncSubject</string>
    <string name="throttle_last">ThrottleLast</string>
    <string name="debounce">Debounce</string>
    <string name="window">Window</string>
    <string name="delay">delay</string>
    <string name="throttle_first">ThrottleFirst</string>
    <string name="flatMapAndFilter">flatMapAndFilter</string>
    <string name="flatMap">flatMap</string>
    <string name="flatMapWithZip">flatMapWithZip</string>
    <string name="click_me">Click Me</string>
    <string name="rx_bus">RxBus</string>
    <string name="compose">Compose for reusable</string>
    <string name="result">Result</string>
    <string name="switch_map">Switch Map</string>
    <string name="take_while">Take While</string>
    <string name="take_until">Take Until</string>
    <string name="copy">Copy</string>
    <string name="view_integrity">View integrity</string>
    <string name="i_got_it">I Got It</string>
    <string name="about_me">- Produce by KunMinX with Love -</string>
    <string name="share">Share</string>
    <string name="test_code">
        Output：\n\nObservable.just(1, 3, 5, 7, 9)\n .map(i -&gt; i + 1)\n .filter(i -&gt; i &lt; 5)\n .subscribe(getObserve());\n
    </string>
    <string name="code_tip">
        Tip:\n\n Press ADD button to get start.\n
    </string>
    <string name="tip_developing">This function is developing ^_^</string>
    <string name="btn_name_add">ADD</string>
    <string name="btn_name_remove">REMOVE</string>
    <string name="btn_name_close">CLOSE</string>
    <string name="btn_name_clear">CLEAR</string>
    <string name="group_samples">Samples</string>
    <string name="group_more">More</string>
    <string name="dialog_title_warning">Warning</string>
    <string name="dialog_msg_clear_op_list">Are you sure to clear operator list ?</string>
    <string name="sure">Sure</string>
    <string name="cancel">Cancel</string>
    <string name="op_just">JUST</string>
    <string name="op_map">MAP</string>
    <string name="op_filter">FILTER</string>
    <string name="tip_of_developing">Press ADD button to get start ^_^</string>
    <string name="link_guide">https://mp.weixin.qq.com/s/LQLvwtmKNoOfiCtl4iADgw</string>
    <string name="link_about">https://github.com/KunMinX/RxJava2-Operators-Sample/blob/master/README.md</string>
    <string name="tip_got_it">Congratulations! ^_^</string>
    <string name="operators_json">
        "[{\"header\":\"Creating\",\"isHeader\":true},{\"isHeader\":false,\"t\":{\"content\":\"Complex data traversal\",\"group\":\"Creating\",\"title\":\"just\"}},{\"isHeader\":false,\"t\":{\"content\":\"Complex data traversal\",\"group\":\"Creating\",\"title\":\"fromArray\"}},{\"isHeader\":false,\"t\":{\"content\":\"Complex data traversal\",\"group\":\"Creating\",\"title\":\"fromIterable\"}},{\"isHeader\":false,\"t\":{\"content\":\"Timed task\",\"group\":\"Creating\",\"title\":\"interval\"}},{\"isHeader\":false,\"t\":{\"content\":\"Timed task\",\"group\":\"Creating\",\"title\":\"intervalRange\"}},{\"isHeader\":false,\"t\":{\"content\":\"Nested callback asynchronous event\",\"group\":\"Creating\",\"title\":\"create\"}},{\"isHeader\":false,\"t\":{\"content\":\"Delayed task\",\"group\":\"Creating\",\"title\":\"defer\"}},{\"isHeader\":false,\"t\":{\"content\":\"Delayed task\",\"group\":\"Creating\",\"title\":\"timer\"}},{\"header\":\"Transforming\",\"isHeader\":true},{\"isHeader\":false,\"t\":{\"content\":\"Transformation\",\"group\":\"Transforming\",\"title\":\"map\"}},{\"isHeader\":false,\"t\":{\"content\":\"Transformation\",\"group\":\"Transforming\",\"title\":\"flatMap\"}},{\"isHeader\":false,\"t\":{\"content\":\"Transformation\",\"group\":\"Transforming\",\"title\":\"concatMap\"}},{\"header\":\"Combining\",\"isHeader\":true},{\"isHeader\":false,\"t\":{\"content\":\"Combine multiple observers, and merge events\",\"group\":\"Combining\",\"title\":\"concatArray\"}},{\"isHeader\":false,\"t\":{\"content\":\"Combine multiple observers, and merge events\",\"group\":\"Combining\",\"title\":\"concatDelayError\"}},{\"isHeader\":false,\"t\":{\"content\":\"Combine multiple observers, and merge events\",\"group\":\"Combining\",\"title\":\"megerArray\"}},{\"isHeader\":false,\"t\":{\"content\":\"Combine multiple observers, and merge events\",\"group\":\"Combining\",\"title\":\"megerArrayDelayError\"}},{\"isHeader\":false,\"t\":{\"content\":\"Combine multiple observers and merge them into one observer\",\"group\":\"Combining\",\"title\":\"zip\"}},{\"isHeader\":false,\"t\":{\"content\":\"Combine multiple observers and merge them into one observer\",\"group\":\"Combining\",\"title\":\"combineLatest\"}},{\"isHeader\":false,\"t\":{\"content\":\"Append other events before sending the event\",\"group\":\"Combining\",\"title\":\"startWithArray\"}},{\"isHeader\":false,\"t\":{\"content\":\"Combine multiple events into one event\",\"group\":\"Combining\",\"title\":\"reduce\"}},{\"isHeader\":false,\"t\":{\"content\":\"Combine multiple events into one event\",\"group\":\"Combining\",\"title\":\"collect\"}},{\"isHeader\":false,\"t\":{\"content\":\"Summarize the number of events sent\",\"group\":\"Combining\",\"title\":\"count\"}},{\"header\":\"Filtering\",\"isHeader\":true},{\"isHeader\":false,\"t\":{\"content\":\"Specify filter criteria to filter the required events or data\",\"group\":\"Filtering\",\"title\":\"filter\"}},{\"isHeader\":false,\"t\":{\"content\":\"Filter specified types of events or data\",\"group\":\"Filtering\",\"title\":\"ofType\"}},{\"isHeader\":false,\"t\":{\"content\":\"Events or data with unsatisfied filter conditions\",\"group\":\"Filtering\",\"title\":\"skip\"}},{\"isHeader\":false,\"t\":{\"content\":\"Filter duplicate events or data\",\"group\":\"Filtering\",\"title\":\"distinct\"}},{\"isHeader\":false,\"t\":{\"content\":\"Filter duplicate events or data\",\"group\":\"Filtering\",\"title\":\"distinctUntilChanged\"}},{\"isHeader\":false,\"t\":{\"content\":\"Filter events or data by time or amount\",\"group\":\"Filtering\",\"title\":\"take\"}},{\"isHeader\":false,\"t\":{\"content\":\"Filter events at the specified location\",\"group\":\"Filtering\",\"title\":\"elementAt\"}},{\"isHeader\":false,\"t\":{\"content\":\"Filter events by time period\",\"group\":\"Filtering\",\"title\":\"throttleFirst\"}},{\"isHeader\":false,\"t\":{\"content\":\"Filter events by time period\",\"group\":\"Filtering\",\"title\":\"throttleLast\"}},{\"header\":\"Conditional\",\"isHeader\":true},{\"isHeader\":false,\"t\":{\"content\":\"Determine if all events are met\",\"group\":\"Conditional\",\"title\":\"all\"}},{\"isHeader\":false,\"t\":{\"content\":\"When the sent event judgment condition is not satisfied, the subsequent event reception will be terminated.\",\"group\":\"Conditional\",\"title\":\"takeWhile\"}},{\"isHeader\":false,\"t\":{\"content\":\"Receive subsequent events when the sent event judgment condition is not met\",\"group\":\"Conditional\",\"title\":\"skipWhile\"}},{\"isHeader\":false,\"t\":{\"content\":\"Same as filter\",\"group\":\"Conditional\",\"title\":\"takeUntil\"}},{\"isHeader\":false,\"t\":{\"content\":\"Receive events other than the judgment condition\",\"group\":\"Conditional\",\"title\":\"skipUntil\"}},{\"isHeader\":false,\"t\":{\"content\":\"Determine if the events sent by the two observers are the same\",\"group\":\"Conditional\",\"title\":\"sequenceEqual\"}},{\"isHeader\":false,\"t\":{\"content\":\"Determine whether the specified data contains the specified data.\",\"group\":\"Conditional\",\"title\":\"contains\"}},{\"isHeader\":false,\"t\":{\"content\":\"Determine if the sent data is empty\",\"group\":\"Conditional\",\"title\":\"isEmpty\"}},{\"isHeader\":false,\"t\":{\"content\":\"Multiple observers receive only the \\\"first observed observer who successfully sent data\\\"\",\"group\":\"Conditional\",\"title\":\"amb\"}},{\"header\":\"Blocking\",\"isHeader\":true},{\"isHeader\":false,\"t\":{\"content\":\"Send and receive event listeners\",\"group\":\"Blocking\",\"title\":\"doOnEach\"}},{\"isHeader\":false,\"t\":{\"content\":\"Send and receive event listeners\",\"group\":\"Blocking\",\"title\":\"doOnSubscribe\"}},{\"isHeader\":false,\"t\":{\"content\":\"Send and receive event listeners\",\"group\":\"Blocking\",\"title\":\"doOnNext\"}},{\"isHeader\":false,\"t\":{\"content\":\"Send and receive event listeners\",\"group\":\"Blocking\",\"title\":\"doAfterNext\"}},{\"isHeader\":false,\"t\":{\"content\":\"Send and receive event listeners\",\"group\":\"Blocking\",\"title\":\"doOnComplete\"}},{\"isHeader\":false,\"t\":{\"content\":\"Send and receive event listeners\",\"group\":\"Blocking\",\"title\":\"doOnError\"}},{\"isHeader\":false,\"t\":{\"content\":\"Error or exception handling: catch exceptions and feedback special results, normal termination\",\"group\":\"Blocking\",\"title\":\"onErrorReturn\"}},{\"isHeader\":false,\"t\":{\"content\":\"Error or exception handling: catch exception and return a new event\",\"group\":\"Blocking\",\"title\":\"onErrorResumeNext\"}},{\"isHeader\":false,\"t\":{\"content\":\"Error or exception handling: exception retry\",\"group\":\"Blocking\",\"title\":\"retry\"}},{\"isHeader\":false,\"t\":{\"content\":\"Event retransmission\",\"group\":\"Blocking\",\"title\":\"repeat\"}},{\"isHeader\":false,\"t\":{\"content\":\"Event retransmission\",\"group\":\"Blocking\",\"title\":\"repeatWhen\"}},{\"isHeader\":false,\"t\":{\"content\":\"Event retransmission\",\"group\":\"Blocking\",\"title\":\"repeatUntil\"}},{\"isHeader\":false,\"t\":{\"content\":\"Delay sending an observer's event\",\"group\":\"Blocking\",\"title\":\"delay\"}},{\"isHeader\":false,\"t\":{\"content\":\"Send event timeout processing\",\"group\":\"Blocking\",\"title\":\"timeout\"}}]"
    </string>
</resources>