<?xml version="1.0" encoding="utf-8"?>

<!--
    ~ Copyright (c) 2018-2019. KunMinX
    ~
    ~ Licensed under the Apache License, Version 2.0 (the "License");
    ~ you may not use this file except in compliance with the License.
    ~ You may obtain a copy of the License at
    ~
    ~    http://www.apache.org/licenses/LICENSE-2.0
    ~
    ~ Unless required by applicable law or agreed to in writing, software
    ~ distributed under the License is distributed on an "AS IS" BASIS,
    ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    ~ See the License for the specific language governing permissions and
    ~ limitations under the License.
    ~
-->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group
        android:id="@+id/group1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_guide"
            android:icon="@drawable/ic_guide"
            android:title="@string/guide"
            app:showAsAction="ifRoom" />

        <item
            android:id="@+id/nav_declare"
            android:checked="true"
            android:icon="@drawable/ic_declare"
            android:title="@string/declare"
            app:showAsAction="ifRoom" />
    </group>

    <item android:title="@string/group_samples">
        <menu>

            <group
                android:id="@+id/group2"
                android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_operators"
                    android:icon="@drawable/ic_operators"
                    android:title="@string/operators"
                    app:showAsAction="ifRoom" />
                <item
                    android:id="@+id/nav_networking"
                    android:icon="@drawable/ic_networking"
                    android:title="@string/networking"
                    app:showAsAction="ifRoom" />
                <item
                    android:id="@+id/nav_cache"
                    android:icon="@drawable/ic_cache"
                    android:title="@string/cache"
                    app:showAsAction="ifRoom" />

                <item
                    android:id="@+id/nav_rxbus"
                    android:icon="@drawable/ic_rxbus"
                    android:title="@string/rx_bus"
                    app:showAsAction="ifRoom" />

                <item
                    android:id="@+id/nav_pagination"
                    android:icon="@drawable/ic_pagination"
                    android:title="@string/pagination"
                    app:showAsAction="ifRoom" />

                <item
                    android:id="@+id/nav_compose"
                    android:icon="@drawable/ic_compose"
                    android:title="@string/compose"
                    app:showAsAction="ifRoom" />

                <item
                    android:id="@+id/nav_search"
                    android:icon="@drawable/ic_search"
                    android:title="@string/search"
                    app:showAsAction="ifRoom" />
            </group>

        </menu>
    </item>

    <item android:title="@string/group_more">
        <menu>

            <group
                android:id="@+id/group3"
                android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_settings"
                    android:icon="@drawable/ic_settings"
                    android:title="@string/setting"
                    app:showAsAction="ifRoom" />

                <item
                    android:id="@+id/nav_about"
                    android:icon="@drawable/ic_about"
                    android:title="@string/about"
                    app:showAsAction="ifRoom" />

            </group>

        </menu>
    </item>

</menu>